@@ -9,6 +9,7 @@ Version 1.0.xxxx (November xxth 2013)
 - Fixed: Hardware Settings, Domoticz remote server port display
 - Changed: Contact notifications now says 'Open/Closed' instead of 'On/Off'
 - Fixed: Commandline option for linux now ignores slash character /
+- Implemented: new switch type 'Group On/Off'
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
